--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "openai": "^4.15.0",
-    "nodemailer": "^6.9.0"
+    "openai": "^4.15.0"
   }
 }
