--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "react": "latest",
     "react-dom": "latest",
     "openai": "^4.15.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.0.0",
+    "postcss": "^8.0.0",
+    "autoprefixer": "^10.0.0"
   }
 }
