--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "openai": "^4.15.0"
+    "openai": "^4.15.0",
+    "nodemailer": "^6.9.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.0.0",
